@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+common/button.c: calming mood floors should calm attacking monsters.
+Nicolas Weeger 2007-05-27
+
 server/c_move.c: remove extra space.
 Nicolas Weeger 2007-05-27
 
